implemented change_password

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,6 +88,9 @@
                         <a class="nav-link" href="{{ url_for('reset_password') }}">Reset Password</a>
                     </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('change_password') }}">Change Password</a>
+                    </li>
 
                     <!-- Add more navigation links as needed -->
                 </ul>
