--- a/templates/forms/expense_form.html
+++ b/templates/forms/expense_form.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Bank Payment Voucher</h1>
-    <form method="POST" action="/" id="expenseForm">
+    <form method="POST" id="expenseForm">
         {{ form.hidden_tag() }}
         {{ form.main_account.label }} {{ form.main_account(id="main_account") }}
         <br>
