--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -47,6 +47,7 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
                     {% endfor %}
                 </tbody>
             </table>
+            {% if g.user.role.id != 4 %}
         
             <button id="downloadExcelButton">Download Excel Report</button>
         
@@ -71,6 +72,7 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
                     window.location.href = linkUrlPdf;
                 });
             </script>
+            {%endif%}
         </body>
 
 {%endblock%}
