--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,7 +66,7 @@
         <div class="head-wrap">
 
             <div class="head-title">
-                <span>Employee-id: {{person.id}}</span>
+                <span>Employee-id: {{person.employee_id}}</span>
                 <h1>Welcome, {{ person.name }}!</h1>
                 <!-- <div class="user-info">
                     <i class="fa-solid fa-user"></i>
