--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <section id="nav">
             {%block anchor%}<a href="{{url_for('dashboard')}}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>{%endblock%}
             <a id="head">{% block header%}{% endblock  %}</a>
-            <a href="#" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
+            <a href="{{url_for('logout')}}" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
         </section>
     </header>
 
