--- a/templates/query/balance_sheet.html
+++ b/templates/query/balance_sheet.html
@@ -8,6 +8,10 @@ Coollink Employees Multi-Purpose Co-operative Society - Balance Sheet
 Balance Sheet
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
 {%block content%}
 <body id='balance-sheet'>
     <!-- Display your balance sheet data here -->
