--- a/templates/query/expense.html
+++ b/templates/query/expense.html
@@ -8,6 +8,9 @@ loan account
 COOLINK CO-OPERATIVE EXPENSE ACCOUNT
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
 
 {%block content%}
 <body id="person">
