--- a/templates/admin/ledger.html
+++ b/templates/admin/ledger.html
@@ -9,7 +9,7 @@ Ledger
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('ledger_admin') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
