--- a/templates/admin/ledger_admin.html
+++ b/templates/admin/ledger_admin.html
@@ -9,7 +9,7 @@ Ledger Admin
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('dashboard') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
