--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -9,7 +9,7 @@ Reset Password
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('dashboard') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
