--- a/templates/forms/startup.html
+++ b/templates/forms/startup.html
@@ -9,7 +9,7 @@ Upload Excel File
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('forms') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
