--- a/templates/queries.html
+++ b/templates/queries.html
@@ -1,20 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accounting Website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link rel="stylesheet" href="\static\css\style.css">
-</head>
-<body class="index">
-    <section id="nav">
-        <a href="{{url_for('dashboard')}}" class="head">Accounting</a>
-        <a href="#" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
-    </section>
+{%extends 'dashboard.html' %}
 
-    <section id="topic">
-    <h1>Welcome to our Accounting Website</h1>
+{%block title%}
+Queries
+{% endblock %}
+
+{%block dash%}
+nav-item
+{%endblock%} 
+
+{%block active%}
+nav-item
+{%endblock%} 
+
+{%block query%}
+active
+{%endblock%}
+
+{%block content%}
+<section id="topic">
+    <!-- <h1>Welcome to our Accounting Website</h1> -->
     
     <div class="all-cards">
     <div class="card">
@@ -69,11 +73,5 @@
     </div>
 </section> 
 
-    
-<!-- 
-<footer>
-    <p>&copy; 2023 Your Accounting Website</p>
-</footer> -->
-
 </body>
-</html>
+{%endblock%}
