--- a/templates/query/banks.html
+++ b/templates/query/banks.html
@@ -8,6 +8,10 @@ Bank Information
 BANK INFORMATION
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
 {%block content%}
 <body id="person">
     <table class="tab-content">
