--- a/templates/query/companies.html
+++ b/templates/query/companies.html
@@ -9,7 +9,7 @@ Bank Information
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
