--- a/templates/query/ledger_report.html
+++ b/templates/query/ledger_report.html
@@ -8,6 +8,10 @@ Ledger Report
 Ledgers
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
 {%block content%}
 
 <body id="person">
