--- a/templates/query/person.html
+++ b/templates/query/person.html
@@ -8,6 +8,10 @@ Employee Details
 EMPLOYEE DETAILS
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
 {%block content%}
 
 <body id="person">
