--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -9,17 +9,40 @@ COOLINK CO-OPERATIVE SAVINGS ACCOUNT
 {% endblock  %}
 
 {% block anchor%}
-<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
 {% endblock  %}
 
 {%block content%}
 <body id="person">
-    <div class="dp">
+    <!-- <div class="dp">
         <div class='p-tag'><h2>Name: {{ person.name }}</h2></div>
         <div class='p-tag'><h2>Company: {{ person.company.name }}</h2></div>
         <div class='p-tag'><h2>Member ID: {{ person.employee_id }}</h2></div>
         <div class='p-tag'><h2>Total balance: {{ person.total_balance | currency }}</h2></div>
-    </div>
+    </div> -->
+    <table class='tab-content'id="info-table" >
+        
+        <tr>
+            <td>Name:</td>
+            <td>{{ person.name }}</td>
+        </tr>
+
+        <tr>
+            <td>Company:</td>
+            <td>{{ person.company.name }}</td>
+        </tr>
+
+        <tr>
+            <td>Member ID:</td>
+            <td>{{ person.employee_id }}</td>
+        </tr>
+
+        <tr>
+            <td>Loan:</td>
+            <td>{{ person.total_balance | currency }}</td>
+        </tr>
+        
+    </table>
     <table class="tab-content">
                 <tbody>
                     <tr>
