--- a/templates/query/savings_payment.html
+++ b/templates/query/savings_payment.html
@@ -8,19 +8,24 @@ Person Payments
 Coolink Cooperative Savings Account
 {% endblock  %}
 
+{% block anchor%}
+<a href="{{ url_for('queries') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
 {%block content%}
 <body id="person">
-    <form method="get" class="form-inline my-2">
-        <div class="form-group mx-2">
+    <form method="get" class="">
+        <div class="">
             {{ form.start_date.label }}
             {{ form.start_date(class="form-control") }}
         </div>
-        <div class="form-group mx-2">
+        <div class="">
             {{ form.end_date.label }}
             {{ form.end_date(class="form-control") }}
         </div>
-        <button type="submit" class="btn btn-primary">Apply Filter</button>
+        <button type="submit" class="">Apply Filter</button>
     </form>
+    
     <table class="tab-content">
     
     <tbody>
