--- a/templates/forms/income_form.html
+++ b/templates/forms/income_form.html
@@ -14,17 +14,19 @@ Input Income
 
 {%block content%}
 <body id="form">
-    <div class="full-form-content">
-
+  <div class="full-form-content">
+    <div>
     {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class="flash-messages">
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+    {% if messages %}
+        <ul class="flash-messages">
+            {% for message in messages %}
+                <li class="{{ message[1] }}">{{message}}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
+    </div>
+
   <div class="form-wrapper" id="long-form">
       <form method="POST">
           {{ form.hidden_tag() }}
