--- a/templates/forms/change_password.html
+++ b/templates/forms/change_password.html
@@ -3,6 +3,20 @@
 
 {% block content %}
   <h2>Change Password</h2>
+  <div class="full-form-content">
+
+    <div class = "flashed-messages">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <ul class="flash-messages">
+              {% for message in messages %}
+                  <li class="{{ message[1] }}">{{message}}</li>
+              {% endfor %}
+          </ul>
+      {% endif %}
+      {% endwith %}
+      </div>
+      
   <form method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
@@ -28,4 +42,5 @@
     </div>
     <button type="submit">Change Password</button>
   </form>
+</div>
 {% endblock %}
