--- a/templates/forms/expense_form.html
+++ b/templates/forms/expense_form.html
@@ -15,6 +15,18 @@ Bank Payment Voucher
 {%block content%}
 <body id="form">
     <div class="full-form-content">
+        <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                    <li class="{{ message[1] }}">{{message}}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% endwith %}
+        </div>
+    <div class="full-form-content">
 
         <div class="form-wrapper" id="long-form">
 
