--- a/templates/forms/payment.html
+++ b/templates/forms/payment.html
@@ -16,15 +16,18 @@ Make Payment
 <body id="form">
     <div class="full-form-content">
     
-    {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class="flash-messages">
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+      <div class="full-form-content">
+        <div class = "flashed-messages">
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+              <ul class="flash-messages">
+                  {% for message in messages %}
+                      <li class="{{ message[1] }}">{{message}}</li>
+                  {% endfor %}
+              </ul>
+          {% endif %}
+          {% endwith %}
+          </div>
 
   <div class="form-wrapper" id="long-form">
     <form method="POST">
