--- a/templates/forms/person_form.html
+++ b/templates/forms/person_form.html
@@ -15,15 +15,17 @@ Create Person
 {%block content%}
 <body id="form">
     <div class="full-form-content">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class="flash-messages">
-            {% for message in messages %}
-                <li class="{{ message }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %}
+        <div class = "flashed-messages">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flash-messages">
+                    {% for message in messages %}
+                        <li class="{{ message[1] }}">{{message}}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
+            </div>
 
     <div class="form-wrapper" id="long-form"> 
         <form method="POST">
