--- a/templates/forms/startup.html
+++ b/templates/forms/startup.html
@@ -14,7 +14,19 @@ Upload Excel File
 
 {%block content%}
 <body id="form">
+
     <div class="full-form-content">
+        <div class = "flashed-messages">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flash-messages">
+                    {% for message in messages %}
+                        <li class="{{ message[1] }}">{{message}}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
+            </div>
 
         <div class="form-wrapper" >
             <form method="POST" enctype="multipart/form-data">
