--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="\static\css\style.css">
 </head>
 <body class="special-dash">
+    <div class="full-form-content">
+        <div class = "flash-messages">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                    <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% endwith %}
+        </div>
     
     <div class='all-sections'>
         
