--- a/templates/forms.html
+++ b/templates/forms.html
@@ -69,6 +69,13 @@ active
                 <a href="{{ url_for('upload_savings') }}">Upload Savings</a>
             </div>
         </div>
+        
+        <div class="card">
+
+            <div class="container">
+                <a href="{{ url_for('upload_loan') }}">Upload Loan</a>
+            </div>
+        </div>
 
         <div class="card">
 
