--- a/templates/forms/bank_form.html
+++ b/templates/forms/bank_form.html
@@ -16,18 +16,17 @@ Create Bank
 <body id="form">
     <div class="full-form-content">
         
-    <div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class="flash-messages">
-            {% for message in messages %}
-                <li class="{{ message[1] }}">{{message}}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %}
-    </div>
-
+        <div class = "flash-messages">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="flash-messages">
+                    {% for message in messages %}
+                        <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
+            </div>
    <div class="form-wrapper"> 
         <form method="POST">
             {{ form.hidden_tag() }}
