--- a/templates/forms/edit_profile.html
+++ b/templates/forms/edit_profile.html
@@ -15,13 +15,12 @@ Edit Person
 {%block content%}
 
 <body>
-    <div class="full-form-content">
-        <div>
-        {% with messages = get_flashed_messages() %}
+    <div class = "flash-messages">
+        {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul class="flash-messages">
                 {% for message in messages %}
-                    <li class="{{ message[1] }}">{{message}}</li>
+                    <li class="fade-out {{message[0]}}">{{message[1]}}</li>
                 {% endfor %}
             </ul>
         {% endif %}
