--- a/templates/forms/income_form.html
+++ b/templates/forms/income_form.html
@@ -14,18 +14,19 @@ Input Income
 
 {%block content%}
 <body id="form">
+  
   <div class="full-form-content">
-    <div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class="flash-messages">
-            {% for message in messages %}
-                <li class="{{ message[1] }}">{{message}}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %}
-    </div>
+    <div class = "flash-messages">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+          <ul class="flash-messages">
+              {% for message in messages %}
+                  <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+              {% endfor %}
+          </ul>
+      {% endif %}
+      {% endwith %}
+      </div>
 
   <div class="form-wrapper" id="long-form">
       <form method="POST">
