--- a/templates/query/balance_sheet.html
+++ b/templates/query/balance_sheet.html
@@ -55,7 +55,7 @@ Balance Sheet
 
     <div class="bal-chart">
         <!-- Add a canvas element where the chart will be rendered -->
-        <canvas id="myChart"></canvas>
+        <!--<canvas id="myChart"></canvas>-->
       </div>
 
     <!-- JavaScript for Data Visualization (if needed) -->
